<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_fingerprint">

    <fragment
        android:id="@+id/navigation_tracker"
        android:name="c.arp.gaitauth.ui.fragments.GaitInformationFragment"
        android:label="@string/title_track"
        tools:layout="@layout/fragment_movement_tracker" />

    <fragment
        android:id="@+id/navigation_fingerprint"
        android:name="c.arp.gaitauth.ui.fragments.UnlockFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_identify_user" />

    <fragment
        android:id="@+id/navigation_secret_page"
        android:name="c.arp.gaitauth.ui.fragments.SecretPageFragment"
        android:label="@string/title_secret_page"
        tools:layout="@layout/fragment_secret_page" />
</navigation>