<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/trackerForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:padding="20dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/usernameTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_username"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="14sp" />

            <Switch
                android:id="@+id/switch_save_to_downloads"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="Save to downloads folder" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="If off it will be saved to SD card." />

            <Button
                android:id="@+id/buttonStartTracking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/rounded_button"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/buttonStartTracking"
                android:textColor="@color/colorPrimaryDark" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/progressBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/trackerForm">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:indeterminate="false"
                android:progressDrawable="@drawable/circular_progress_bar"
                android:background="@drawable/circle_shape"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_centerInParent="true"
                android:max="10"
                android:progress="10" />

            <TextView
                android:id="@+id/textProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/progressBar"
                android:layout_centerInParent="true"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="60"
                android:textSize="25sp"
                android:textStyle="bold"/>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:paddingTop="5dp"
            android:textSize="12sp"
            android:text="@string/additionalInformation"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/progressBarLayout"/>
</androidx.constraintlayout.widget.ConstraintLayout>